Try adjusting path for swagger.yaml

--- a/.redocly.yaml
+++ b/.redocly.yaml
@@ -1,8 +1,3 @@
 apiDefinitions:
-  cellar: ./cmd/cellar/docs/swagger.yaml
-
-lint:
-  extends: recommend
-  rules:
-    boolean-parameter-prefixes: warn
+  cellar: cmd/cellar/docs/swagger.yaml
 
