--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ stages:
 
 variables:
   APP_NAME: cellar-api
-  APP_VERSION: 1.0.0
+  APP_VERSION: 1.0.1
   IMAGE_NAME: ${CI_REGISTRY_IMAGE}
   PACKAGE_REGISTRY_URL: ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic
 
@@ -64,6 +64,20 @@ test-integration:
   script:
     - make test-integration
 
+publish-reference:
+  extends: .api
+  stage: publish
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+      when: manual
+  script:
+    - make redoc
+      APP_VERSION=${APP_VERSION}
+      REDOC_FILE=public/index.html
+  artifacts:
+    paths:
+      - public
+
 publish-binary:
   extends: .api
   stage: publish
@@ -98,6 +112,8 @@ release:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   needs:
     - job: publish-binary
+      artifacts: true
+    - job: publish-reference
       artifacts: true
     - job: publish-docker
   image: registry.gitlab.com/gitlab-org/release-cli:latest
