--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,6 +66,7 @@ test-unit:
     VAULT_ADDRESS: http://vault:8200
     VAULT_ROOT_TOKEN: vault-admin
     VAULT_TOKEN_NAME: cellar-testing
+    VAULT_AUTH_BACKEND: approle
   services:
     - name: redis:6.0-alpine
       alias: redis
