--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -150,6 +150,7 @@ release:
     - job: pages
       artifacts: true
     - job: publish-docker
+  allow_failure: true
   image: registry.gitlab.com/gitlab-org/release-cli:latest
   before_script:
     - apk add --no-cache make
