--- a/.redocly.yaml
+++ b/.redocly.yaml
@@ -1,3 +1,6 @@
-apiDefinitions:
-  cellar: cmd/cellar/docs/swagger.yaml
+apis:
+  cellar@v1:
+    root: docs/v1_swagger.yaml
+  cellar@v2:
+    root: docs/v2_swagger.yaml
 
