Generate swagger docs with v3
Signed-off-by: Aria Vesta <dev@ariavesta.com>

--- a/.redocly.yaml
+++ b/.redocly.yaml
@@ -1,6 +1,6 @@
 apis:
-  cellar@v1:
-    root: docs/v1_swagger.yaml
-  cellar@v2:
-    root: docs/v2_swagger.yaml
+  cellar:
+    root: docs/swagger.json
+    labels:
+      - common
 
