--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,18 +58,21 @@ test-unit:
 .api-test-depends:
   extends: .api
   variables:
-    DATASTORE_REDIS_HOST: "redis"
-    DATASTORE_REDIS_PORT: 6379
+    # SERVICES AND MAKEFILE SETTINGS
     REDIS_HOST: "redis"
     REDIS_PORT: 6379
     VAULT_DEV_ROOT_TOKEN_ID: vault-admin
     VAULT_DEV_LISTEN_ADDRESS: 0.0.0.0:8200
     VAULT_LOCAL_ADDR: http://vault:8200
-    CRYPTOGRAPHY_VAULT_ENABLED: true
-    VAULT_ADDRESS: http://vault:8200
     VAULT_ROOT_TOKEN: vault-admin
     VAULT_ENCRYPTION_TOKEN_NAME: cellar-testing
-    VAULT_AUTH_MOUNT_PATH: approle
+    # APP SETTINGS
+    DATASTORE_REDIS_HOST: "redis"
+    DATASTORE_REDIS_PORT: 6379
+    CRYPTOGRAPHY_VAULT_ENABLED: true
+    CRYPTOGRAPHY_VAULT_AUTH_MOUNT_PATH: approle
+    CRYPTOGRAPHY_VAULT_ADDRESS: http://vault:8200
+    CRYPTOGRAPHY_VAULT_ENCRYPTION_TOKEN_NAME: cellar-testing
   services:
     - name: redis:6.0-alpine
       alias: redis
